codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__render_lineage_tree_includes_ancestors_and_marks_focused_thread.snap
---
source: tui/src/chatwidget/tests.rs
expression: render_lineage_tree(&response)
---
● thread-paren  owner=owner@example.com · thread=thread-parent · root
└─● thread-child (HEAD)  owner=alice@example.com · thread=thread-child · forked_by=alice@example.com · 2026-03-08 10:00:00Z
  └─● thread-grand  owner=bob@example.com · thread=thread-grandchild · forked_by=bob@example.com · 2026-03-08 11:00:00Z
