codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__together_context_view.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  Context                                                                                                               "
"                                                                                                                        "
"  ◯ [insight] Search results in chatwidget.rs                                                                        <  "
"  ╰─ ◯ [file] Changed tui/src/chatwidget.rs                                                                             "
"  ◯ [insight] Simplify /context selection flow  handoff                                                                 "
"  ⏣ [rules] Handoff selection flow                                                                                      "
"                                                                                                                        "
"  esc close                                                                                  ◯ thread  ⏣ repo  * hotspot"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
