codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__together_context_view_global.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  Context                                                                                                               "
"                                                                                                                        "
"    < ◯ [insight] Search results in chatwidget.rs                                                                       "
"  ╰─     ◯ [file] Changed tui/src/chatwidget.rs                                                                         "
"      ◯ [insight] Simplify /context selection flow      handoff                                                         "
"  ╰─     ⏣ [rules] Handoff selection flow                                                                               "
"      ◯ [insight] Search: promotion scoring heuristics  from thread 019cf3a8                                            "
"                                                                                                                        "
"  esc close                                                                                ◯ thread  ⏣ repo  * hotspot  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
