codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__together_context_view_local_without_anchor.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  Context                                                                                                               "
"                                                                                                                        "
"  ◯ [insight] Capture branch state                    from thread 019cf3a8                                           <  "
"  ⏣ [insight] Summarize this branch in one sentence.                                                                    "
"                                                                                                                        "
"  esc close                                                                                ◯ thread  ⏣ repo  * hotspot  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
