codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__together_context_view_local_without_artifacts.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  Context                                                                                                               "
"                                                                                                                        "
"  Filter anchored context                                                                                               "
"  › ⏣ [insight] Summarize this branch in one sentence.                                                                  "
"                                                                                                                        "
"  esc close                                                                                ◯ thread  ⏣ repo  * hotspot  "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
