codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__together_handoff_view.snap
---
source: tui/src/chatwidget/tests.rs
expression: terminal.backend()
---
"                                                                                                                        "
"                                                                                                                        "
"  Handoff                                                                                                               "
"  Goal: Continue the handoff with the key UI nodes.                                                                     "
"                                                                                                                        "
"  [ ] ◯ [file] Changed tui/src/chatwidget.rs                                                                            "
"  [x] ◯ [insight] Simplify /context selection flow  handoff                                                             "
"                                                                                                                        "
"  enter toggle | h handoff | esc close                                                       ◯ thread  ⏣ repo  * hotspot"
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
